--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.4.2
+aniso8601==7.0.0
 bcrypt==3.1.7
 blinker==1.4
 cffi==1.13.2
@@ -6,16 +8,29 @@ dominate==2.4.0
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
+Flask-GraphQL==2.0.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
+Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
+graphene==2.1.8
+graphene-sqlalchemy==2.2.2
+graphql-core==2.3.1
+graphql-relay==2.0.1
+graphql-server-core==1.2.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+Mako==1.1.2
 MarkupSafe==1.1.1
 Pillow==6.2.1
+promise==2.3
 pycparser==2.19
+python-dateutil==2.8.1
+python-editor==1.0.4
+Rx==1.6.1
+singledispatch==3.4.0.3
 six==1.13.0
 SQLAlchemy==1.3.12
 visitor==0.1.3
