Elastic Search functionality added

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,22 @@ alembic==1.4.2
 aniso8601==7.0.0
 bcrypt==3.1.7
 blinker==1.4
+certifi==2020.4.5.1
 cffi==1.13.2
+chardet==3.0.4
 Click==7.0
 dominate==2.4.0
 elasticsearch==7.6.0
+facebook-sdk==3.1.0
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
+Flask-Dance==3.0.0
 Flask-GraphQL==2.0.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
+Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
 Flask-Uploads==0.2.1
 Flask-WhooshAlchemy==0.56
@@ -22,20 +27,28 @@ graphene-sqlalchemy==2.2.2
 graphql-core==2.3.1
 graphql-relay==2.0.1
 graphql-server-core==1.2.0
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.2
 MarkupSafe==1.1.1
+oauthlib==3.1.0
 Pillow==6.2.1
 promise==2.3
 pycparser==2.19
+PyJWT==1.7.1
 python-dateutil==2.8.1
+python-dotenv==0.12.0
 python-editor==1.0.4
+requests==2.23.0
+requests-oauthlib==1.3.0
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.13.0
 SQLAlchemy==1.3.12
+SQLAlchemy-Utils==0.36.3
 urllib3==1.25.8
+URLObject==2.4.3
 visitor==0.1.3
 Werkzeug==0.16.0
 Whoosh==2.7.4
